# npi-gpio

./: CMakeLists.txt  README.md
python/npi_gpio/: __init__.py
src/: gpio.c  gpio.h  py_gpio.c
